fix display on mobile

--- a/src/app/inverter/inverter.component.scss
+++ b/src/app/inverter/inverter.component.scss
@@ -17,7 +17,7 @@ app-chart-view {
 .content {
   display: flex;
   flex-direction: column;
-  min-width: 650px;
+  min-width: 570px;
   max-width: 1280px;
   width: 100%;
 }
